# djangocms-apphook-setup

./: .bumpversion.cfg  .checkignore  .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  cms_helper.py  pyproject.toml  requirements-test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: test.yml
changes/: 16.feature  45.bugfix
djangocms_apphook_setup/: __init__.py  base.py
tests/: base.py  test_setup.py
tests/sample_app_1/: cms_appconfig.py  cms_apps.py  urls.py
tests/sample_app_2/: cms_apps.py  urls.py  views.py
tests/sample_app_3/: cms_apps.py  urls.py  views.py
tests/sample_app_4/: cms_app.py  cms_appconfig.py  cms_apps.py  urls.py  views.py
tests/sample_app_5/: cms_apps.py  urls.py  views.py
tests/sample_app_6/: cms_app.py  cms_appconfig.py  cms_apps.py  urls.py
tests/test_utils/: urls.py
