[bumpversion]
current_version = 0.10.1.dev1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
    {major}.{minor}.{patch}.{release}{relver}
    {major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
    dev
    a
    b
    rc
    gamma

[bumpversion:file:djangocms_apphook_setup/__init__.py]

[metadata]
name = djangocms-apphook-setup
version = attr: djangocms_apphook_setup.__version__
url = https://github.com/nephila/djangocms-apphook-setup
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Library to auto setup apphooks
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
keywords = djangocms-apphook-setup, django CMS, apphook
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    django-cms>=3.7
setup_requires =
    setuptools
packages = djangocms_apphook_setup
python_requires = >=3.6
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_apphook_setup = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
