[metadata]
name = djangocms-apphook-setup
version = attr: djangocms_apphook_setup.__version__
url = https://github.com/nephila/djangocms-apphook-setup
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Library to auto setup apphooks
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
keywords = djangocms-apphook-setup, django CMS, apphook
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
    django-cms>=3.7,<4.0
setup_requires =
    setuptools
packages = djangocms_apphook_setup
python_requires = >=3.7
test_suite = cms_helper.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_apphook_setup = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
